# very_simple_package

./: .gitignore  README.md  requirements.txt
packaging_tutorial/: LICENSE  README.md  pyproject.toml
packaging_tutorial/docs/source/: conf.py  index.rst
packaging_tutorial/src/very_simple_package_braveGrumpy/: basic_arithmetic.py
packaging_tutorial/src/very_simple_package_braveGrumpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
packaging_tutorial/very_simple_package_braveGrumpy/: basic_arithmetic.py
