[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "very_simple_package_braveGrumpy"
version = "0.0.1"
authors = [
    { name="Brave Grumpy", email="code@bravegumpy.com" },
]
description = "A small example package, including a basic arithmetic class that can add and multiply"
readme = "README.md"
requires-python = ">=3.7"
classifiers - [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independant",
]

[project.urls]
"Homepage" = "https://github.com/bravegrumpy/very_simple_package"
"Package Sourcecode" = "https://github.com/bravegrumpy/very_simple_package/tree/main/packaging_tutorial"
"Project Wiki" = "https://github.com/bravegrumpy/very_simple_package/wiki"
"Bug Tracker" = "https://github.com/bravegrumpy/very_simple_package/issues"